# Hybrid-Agent

./: .dockerignore  .env  .env.example  .gitignore  CLAUDE.md  Dockerfile  KNOWN_FAILURES.md  LICENSE  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  alembic.ini  claude-progress.txt  docker-compose.yml  docker-entrypoint.sh  documents.db  main.py  pyproject.toml  start.sh
.github/workflows/: ci.yml
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: 0001_initial.py
chroma_db/a69115ec-d9b7-4ee6-9b08-16445d506dfa/: index_metadata.pickle
docs/: README.md  architecture.md  conventions.md  deployment.md  project-overview.md  release-checklist.md
docs/superpowers/plans/: 2026-04-12-phase1-harness-backend-foundation.md  2026-04-12-phase2-backend-features-completed.md  2026-04-12-phase3-frontend.md
docs/superpowers/specs/: 2026-04-12-enterprise-upgrade-design.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: admin.js  auth.js  chat.js  documents.js  http.js
frontend/src/components/: AppHeader.vue  AppShell.vue  AppSidebar.vue  FeatureCard.vue
frontend/src/composables/: useSSE.js  useTheme.js  useUpload.js
frontend/src/router/: index.js
frontend/src/stores/: chat.js  documents.js  user.js
frontend/src/styles/: index.css  tokens.css
frontend/src/views/: AdminView.vue  ChatView.vue  DocumentsView.vue  LoginView.vue  OverviewView.vue  SettingsView.vue
grafana/provisioning/dashboards/: dashboards.yml  hybrid_agent_runtime_overview.json
grafana/provisioning/datasources/: prometheus.yml
plans/: dark_mode_spec.md  dark_mode_tasks.md  frontend_optimization_plan.md  rag_improvement_plan.md
prometheus/: prometheus.yml
prometheus/rules/: hybrid_agent_base.rules.yml
rag_app/agent/: builder.py
rag_app/cli/: streaming.py
rag_app/core/: config.py  database.py  document_processor.py  rag_system.py  vector.py
rag_app/llm/: models.py
rag_app/middleware/: model_switch.py
rag_app/tools/: __init__.py  document_tools.py  web_search.py
rag_frontend/: fronted.py
rag_frontend/api/: chat.py  documents.py  main.py  models.py
rag_frontend/services/: rag_service.py
rag_frontend/utils/: helpers.py
scripts/: check.py  release_check.py
src/hybrid_agent/: __init__.py
src/hybrid_agent/agent/: __init__.py  agentic_rag_graph.py  builder.py
src/hybrid_agent/agent/reviewer/: __init__.py  prompts.py  (+2 more)
src/hybrid_agent/api/: __init__.py  main.py  schemas.py
src/hybrid_agent/cli/: __init__.py  main.py  streaming.py
src/hybrid_agent/core/: __init__.py  config.py  database.py  document_processor.py  hybrid_retriever.py  protocols.py  query_understanding.py  rag_system.py  reranker.py  session_manager.py  vector.py
src/hybrid_agent/llm/: __init__.py  model_selector.py  models.py  reviewer.py
src/hybrid_agent/web/: __init__.py  app.py
tests/: __init__.py  conftest.py  test_api_main.py  test_architecture.py  test_provider_runtime.py  test_query_understanding.py  test_rrf_merge.py  test_security_regressions.py  test_session_manager.py
tests/e2e/: global-setup.mjs  package-lock.json  package.json  playwright.config.mjs  smoke.spec.js
tests/e2e/fixtures/: sample.txt
tests/e2e/support/: harness.mjs
(+27 files in other folders)
