[project]
name = "hybrid-agent"
version = "0.1.0"
description = "基于问题复杂度自动切换的多模型智能助手 + RAG 知识库"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dashscope>=1.25.13",
    "dotenv>=0.9.9",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.2",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "sqlalchemy>=2.0.48",
    "streamlit>=1.55.0",
    "chromadb>=0.4.22",
    "langchain-chroma>=0.1.0",
    "pypdf>=3.17.0",
    "python-docx>=1.1.0",
    "docx2txt>=0.8",
    "unstructured>=0.11.0",
    "markdown>=3.5.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.21",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "duckduckgo-search>=4.0.0",
    "python-multipart>=0.0.6",
    "aiosqlite>=0.20.0",
]

[project.scripts]
hybrid-agent = "hybrid_agent.cli.main:run_cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["hybrid_agent*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"